--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
         <header class="cite-header">
             <nav class="main-menu">
 
-                <ul class="menu-buttons" id="menu-buttons">
+                <ul class="menu-buttons menu-buttons-1" id="menu-buttons">
                     <li class="menu-button"><span><a href="#about-us">О нас</a></span></li>
                     <li class="menu-button"><span><a href="#costs">Стоимость</a></span></li>
-                    <li><div class="container-logo-header"><img src="images/logo3++.png"></div></li>
+
+                </ul>
+
+                <div class="container-logo-header"><img src="images/logo3++.png"></div>
+                
+                 <ul class="menu-buttons menu-buttons-2" id="menu-buttons">   
                     <li class="menu-button"><span><a href="#reviews">Отзывы</a></span></li>
                     <li class="menu-button"><span><a href="#contacts">Контакты</a></span></li>
                 </ul>
+
                 <div class="contacts">
                         Заказ: +7-911-464-99-43 (WhatsApp/Viber)
                  </div>
