--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="keywords" content="котоняня, передержка Калининград, зоогостиница"> 
         <meta name="description" content="Наши КотоНяни позаботятся о кошках и котах, когда вы отправляетесь в отпуск. Теперь не нужно отдавать кошку в зоогостиницу или передержку!  Цена ниже чем в отелях для кошек"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>Котоняня в Калининграде. Присмотрим за вашим питомцем, пока вы в отпуске. Лучше, чем зоогостиница!</title>
         <link rel="stylesheet" href="styles.css">
 
@@ -44,7 +45,7 @@
                 </ul>
 
                 <div class="container-logo-header"><img src="images/logo3++.png"></div>
-                
+
                  <ul class="menu-buttons menu-buttons-2" id="menu-buttons">   
                     <li class="menu-button"><span><a href="#reviews">Отзывы</a></span></li>
                     <li class="menu-button"><span><a href="#contacts">Контакты</a></span></li>
