--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru"> 
     <head>
         <meta charset="UTF-8">
-        <meta name="keywords" content="котоняня, передержка Калининград, зоогостиница"> 
+        <meta name="keywords" content="котоняня, передержка Калининград, зоогостиница, отпуск, куда отдать кошку на время отпуска, передержка, котокафе, котокафе Калининград, сиделка для кошки, уход за кошкой, "> 
         <meta name="description" content="Наши КотоНяни позаботятся о кошках и котах, когда вы отправляетесь в отпуск. Теперь не нужно отдавать кошку в зоогостиницу или передержку!  Цена ниже чем в отелях для кошек"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>Котоняня в Калининграде. Присмотрим за вашим питомцем, пока вы в отпуске. Лучше, чем зоогостиница!</title>
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="libs/owl-carousel/owl.carousel.min.css">
         <link rel="stylesheet" href="libs/owl-carousel/owl.theme.default.min.css">
         <link rel="stylesheet" href="libs/font-awesome-4.6.3/css/font-awesome.min.css">
+        <link rel="shortcut icon" href="images/favicon.png" type="image/png">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <!-- jQuery library (served from Google) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -22,31 +23,21 @@
 
 <!-- bxSlider CSS file -->
 <link href="css/jquery.bxslider.css" rel="stylesheet" />
-<script type="text/javascript">
-           $(document).ready(function(){
-              $("#menu-buttons").on("click","a", function (event) {
-                  event.preventDefault();
-                  var id  = $(this).attr('href'),
-                      top = $(id).offset().top;
-                  $('body,html').animate({scrollTop: top}, 1500);
-              });
-          });
-          </script>
+
 
     </head>
     <body>
         <header class="cite-header">
             <nav class="main-menu">
 
-                <ul class="menu-buttons menu-buttons-1" id="menu-buttons">
+                <ul class="menu-buttons menu-buttons-1" id="menu-buttons-1">
                     <li class="menu-button"><span><a href="#about-us">О нас</a></span></li>
                     <li class="menu-button"><span><a href="#costs">Стоимость</a></span></li>
-
                 </ul>
 
                 <div class="container-logo-header"><img src="images/logo3++.png"></div>
 
-                 <ul class="menu-buttons menu-buttons-2" id="menu-buttons">   
+                 <ul class="menu-buttons menu-buttons-2" id="menu-buttons-2">   
                     <li class="menu-button"><span><a href="#reviews">Отзывы</a></span></li>
                     <li class="menu-button"><span><a href="#contacts">Контакты</a></span></li>
                 </ul>
@@ -64,7 +55,7 @@
                             <ul class="about-text">
                                 <li class="menu-button">
                                     <h3 class="about-text-title-2">Ответственный и профессиональный подход</h3>
-                                    <p> Наши "котоняни" из числа сотрудниц котокафе имеют огромный опыт ухода за котами. Достаточно вспомнить, что с 2017 года из котокафе нашли свой дом около 100 животных, также в котокафе на постоянной основе проживает 12-14 котиков. Мы приедем, уберем, покормим, поиграем, польем цветы, вычешем, пришлем отчет с фото и видео.</p>
+                                    <p> Наши "котоняни" из числа сотрудниц котокафе имеют огромный опыт ухода за котами. Достаточно вспомнить, что с 2017 года из котокафе нашли свой дом более 106 животных, также в котокафе на постоянной основе проживает 12-14 котиков. Мы приедем, уберем, покормим, поиграем, польем цветы, вычешем, пришлем отчет с фото и видео.</p>
                                 </li>
 
                                 <li class="menu-button">
@@ -79,17 +70,6 @@
                             </ul>
                     </section>
  
-                    <section class="costs" id="costs">
-                        <h2 class="costs-title">Тарифы</h2>
-                        <div class="costs-text">
-                            <p>ОДИН выезд в день по Калининграду (утром или вечером), до 2 животных – 300 р. в день (за пределами окружной дороги – от 350 р. в день)</p>
-                            <p>ДВА выезда в день по Калининграду (утром и вечером), до 2 животных от 500 р. в день (за пределами окружной дороги – от 550р. в день) </p>
-                            <p>ТОЧНАЯ СТОИМОСТЬ рассчитывается после уточнения вами адреса, состояния здоровья и количества животных, сложности ухода, даты выездов, загруженности сотрудников котокафе. Просто позвоните или <a href="https://wa.me/79164649943">напишите нам</a>, договоримся.</p>
-                            <p>ВКЛЮЧЕНО <br>
-                            Кормление кота вашим кормом, замена воды, уборка лотка, игры, общение с котом, отправка фото и видео владельцу. При необходимости полив цветов и кормление рыбок входит в стоимость. Посещение занимает около 30-60 минут. Во время посещения котоняня пытается отследить изменения в поведении кота, его общительность, желание поесть, ищет признаки того, что с животным что-то не так. В случае обнаружения каких-либо настораживающих признаков котоняня пишет/звонит владельцу животного и предлагает варианты решения проблемы.</p>
-                        </div>
-                    </section>
-
                      <section class="about-us" id="about-us">
                         <h2 class="about-us-title">О нас</h2>
                         <div class="about-us-text">
@@ -101,6 +81,22 @@
                             <p><a href="index.html">Сервис "Котоняня в Калининграде"</a> полностью поддерживает существование проекта <a href="https://vk.com/kotomania39">"Антикафе Котомания (котокафе)"</a>, а значит еще много бездомных животных найдут свой дом!</p>
                         </div>
                     </section>
+
+                    <section class="costs" id="costs">
+                        <h2 class="costs-title">Тарифы</h2>
+                        <div class="costs-text">
+                            <p>ОДИН выезд в день по Калининграду (утром, днем или вечером), до 2 животных – 350 р. в день (за пределами окружной дороги – от 450 р. в день)</p>
+                            <p>ДВА выезда в день по Калининграду (утром, днем или вечером), до 2 животных 700 р. в день (за пределами окружной дороги – от 900р. в день) </p>
+                            <p>
+                                Для заключения договора необходим предварительный выезд сотрудника (занимает минимум 30-40 минут для знакомства с животным и получения необходимых инструкций по уходу от хозяев). Стоимость выезда - 300 р. 
+                            </p>
+                            <p>Стоимость повышается на 50 рублей за каждый выезд в период: с 30 декабря по 9 января, с 1-9 мая</p>
+                            <p>ТОЧНАЯ СТОИМОСТЬ рассчитывается после уточнения вами адреса, состояния здоровья и количества животных, сложности ухода, даты выездов, загруженности сотрудников котокафе. Просто позвоните или <a href="https://wa.me/79164649943">напишите нам</a>, договоримся.</p>
+                            <p>ВКЛЮЧЕНО <br>
+                            Кормление кота вашим кормом, замена воды, уборка лотка, игры, общение с котом, отправка фото и видео владельцу. При необходимости полив цветов и кормление рыбок входит в стоимость. Во время посещения котоняня пытается отследить изменения в поведении кота, его общительность, желание поесть, ищет признаки того, что с животным что-то не так. В случае обнаружения каких-либо настораживающих признаков котоняня пишет/звонит владельцу животного и предлагает варианты решения проблемы.</p>
+                        </div>
+                    </section>
+
 
                     <section class="reviews" id="reviews">
                         <h2 class="reviews-title">Отзывы</h2>
@@ -135,12 +131,22 @@
                                 <h3>Оля Клочкова</h3>
                                 <p>Все на высшем уровне! Воспользовались услугами котоняни в период с 1 по 5 октября и поняли, что теперь все отпуска и командировки только с вами! Наша кисуня была накормлена, напоена и обласкана, лоток убран, кошка на своей привычной территории. А мы с таким удовольствием смотрели все видео с нашей кисой Брусничкой и даже немного приревновали 😆- наша спокойная, флегматичная кошка пела песни и подставляла пузико котоняне с большим доверием- хотя обычно она очень осторожна с людьми. А это означает, что котоняня большой профи! 👍👍👍 Ещё раз большое вам спасибо, обязательно ещё обратимся!</p>
                             </div>
+
+                           <div class="item">
+                                <div class="item-image"><img src="images/au-6.jpg"></div>
+                                <h3>Елена Туева</h3>
+                                <p>Уезжали на две недели и оставили кошку Василису на попечение котоняни. Кошь необщительная и плохо переносит переезды, поэтому на своей привычной территории ей было спокойнее. Выбрали частоту посещений, составили график - все прошло отлично, кошка была накормлена, напоена, лоток чист, а моя душа спокойна. Буду обращаться ещё :)</p>
+                            </div>
+
+
                         </div>
                     </section>
         </main>
 
         <footer class="cite-footer" id="contacts">
-            <div class="contacts-footer">Заказ: +7-911-464-99-43 <br>(WhatsApp/Viber)</div>
+            <div class="contacts-footer">
+                <span>Заказ: +7-911-464-99-43 (WhatsApp/Viber)</span>
+            </div>
 
             <div class="container-logo-header logo-footer"><img src="images/logo3++.png"></div>
  
@@ -149,8 +155,8 @@
                 <div class="social"><a href="https://www.instagram.com/cat_cafe_kotomania/?hl=ru"><img src="images/instagram++.png" class="social-insta"></a></div>
                 <div class="social"><a href="https://vk.com/kotomania39"><img src="images/vk++.png" class="social-vk"></a></div>
             
-                <div class="social"><a href="https://wa.me/79164649943"><img src="images/wa.png" class="social-wa"></a></div>
-                <div class="social"><a href="viber://chat?number=79164649943"><img src="images/vi++++.png" class="social-vi"></a></div>
+                <div class="social"><a href="https://wa.me/79114649943"><img src="images/wa.png" class="social-wa"></a></div>
+                <div class="social"><a href="viber://chat?number=79114649943"><img src="images/vi++++.png" class="social-vi"></a></div>
              </div>
          </footer>
 
