--- a/index.html
+++ b/index.html
@@ -138,6 +138,42 @@
                                 <p>Уезжали на две недели и оставили кошку Василису на попечение котоняни. Кошь необщительная и плохо переносит переезды, поэтому на своей привычной территории ей было спокойнее. Выбрали частоту посещений, составили график - все прошло отлично, кошка была накормлена, напоена, лоток чист, а моя душа спокойна. Буду обращаться ещё :)</p>
                             </div>
 
+                           <div class="item">
+                                <div class="item-image"><img src="images/au-7.jpg"></div>
+                                <h3>Татьяна Маркина</h3>
+                                <p>Обращалась за помощью к Котоняни в новогодние дни. Ежедневно присылали видео и фото нашей кошечки, помимо хорошего ухода хочу отметить искреннюю любовь девушки к котикам, и это видно на видео по интонации и манере общения с животным)) Видно что человек не просто качественно выполняет свои обязанности, а делает это с душой и большой симпатией, что очень важно, ведь кошки чувствуют искренние чувства человека))</p>
+                            </div>
+
+                           <div class="item">
+                                <div class="item-image"><img src="images/au-8.jpg"></div>
+                                <h3>Виктория Сарибекян</h3>
+                                <p>Котоняня следила за нашим котиком неделю. Для нас эта услуга просто находка, так как котика не с кем оставить, а с собой брать - для него большой стресс. Кот, конечно, скучал один, но приходы няни ему явно пошли на пользу - он и играл, и наглажен был, и вниманием не обделён. Когда мы вернулись, он очень быстро вернулся в привычный ритм жизни, хотя раньше несколько дней приходил в себя. Котоняня свою работу делала на сто процентов, большой профи и любитель кошек 👍. Наш котик быстро привык к ней и был счастлив визитам, мы даже не ожидали от него :) Однозначно будем обращаться ещё и ещё, нам очень важно доверять тому, кто следит за котом, а с котоняней мы абсолютно спокойны за него!</p>
+                            </div>
+
+                            <div class="item">
+                                <div class="item-image"><img src="images/au-9.jpg"></div>
+                                <h3>Виктория Семенова</h3>
+                                <p>Давно увидела эту прекрасную услугу, как возникла потребность сразу решила воспользоваться. Уезжала на 4 дня, котоняня - прекрасная девушка, сразу расположила к себе котика и меня. Очень чуткая, внимательная и заботливая. Котик был счастлив, что было понятно по видео. Очень понравилось, что в видео не просто отснят кот, а полностью котоняня комментирует положение дел дома (что там натворил наш проказник или наоборот), настроение кота, его состояние и пищевое поведение. Я очень давольна работой нашей котоняни, на все 200%. Ещё обращусь, по случаю❤ Желаю вашему делу успехов и процветания 🐱🌞</p>
+                            </div>
+
+                            <div class="item">
+                                <div class="item-image"><img src="images/au-10.jpg"></div>
+                                <h3>Татьяна Алфимова</h3>
+                                <p>Хочу выразить благодарность работникам Котокафе!♥ В самые праздники (31.12 и 01.01) нам нужно было уехать, и я не знала, как лучше организовать уход за нашим шкодным котиком. Случайно увидела в Instagram Котокафе услугу Котоняни, и это стало реальным спасением! У нас кот может повредничать, может обидеться, что мы уехали и напроказничать (что он и сделал в коридоре в первый день 🤦‍♀ но котоняня на такую неприятность спокойно отреагировала и все убрала, огромное спасибо! 🌷), ну и, конечно, лоток у этого чистоплюя, должен быть безупречно чистым, а корм в плошке свежим. Котоняня приходила (в праздники!) два раза в день и делала все согласно договорённостям (причем, официальным!)! Всегда с видеоотчётами в чате, все организовано круто и по современному :) мы были спокойны, а кот без сильного стресса пережил расставание, ведь девушка его и гладила, и разговаривала с ним (а он у нас очень холоден к чужим, но к ней подходил ласкаться! вот, что значит настоящая Котоняня))) еще раз спасибо от нашей семьи!✨обязательно обратимся снова!</p>
+                            </div>
+
+                            <div class="item">
+                                <div class="item-image"><img src="images/au-11.jpg"></div>
+                                <h3>Ирина Ксенофонтова</h3>
+                                <p>Раньше мы отвозили котов в котогостиницу, но это было для них сильным стрессом, поэтому решились попробовать котоняню. Впервые воспользовались этой услугой с 3 по 5 января 2020 года. Коты у нас достаточно настороженно относятся к посторонним в доме, но к Инне прониклись и приняли, нелюдим Финдус даже разыгрался. Всегда были на связи, фотографии и видеотчёты приходили каждый день, что было вдвойне приятно, так так мы скучали. Ко всему прочему за котами были убраны следы их нетипичного баловства (вымыт диван), а также вынесены все следы жизнедеятельности, которые мы по приезду ожидали увидеть в мусорном ведре. Огромное спасибо за такую услугу, в следующий раз только к вам.</p>
+                            </div>
+
+
+                            <div class="item">
+                                <div class="item-image"><img src="images/au-12.jpg"></div>
+                                <h3>Ольга Егорова</h3>
+                                <p>Перед выездом на новогодние праздники на 5 дней долго думали с кем оставить котика. Узнали что есть услуга "котоняня". Почитали отзывы и решили воспользоваться. За пару дней до отъезда к нам пришла "котоняня", расспросила об особенностях котика, что он любит, а что нет, а так же по бытовым вопросам (еда, миски, лоток). Заключили договор. Во время нашего отсутствия "котоняня" приходила каждый день, убирала в лотке, кормила котика, играла с ним, гладила и отправляла фото и видео отчет. Кот был счастлив и мы тоже. С радостью воспользуемся этой услугой и в следующий раз.</p>
+                            </div>
 
                         </div>
                     </section>
